# skill-sync-sidecar

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  libtv-m-forward-feishu-append.xml  pyproject.toml  setup.cfg
docs/: acceptance-report.md  agent-day2-runbook.md  approved-push-runbook.md  cross-tool-projection-20260624.md  gateway-observer-20260628.md  handoff-20260725-skill-sync-sidecar.md  local-skill-manager.md  mac-autopull-and-recruitment-approved-push-20260624.md  mac-cross-tool-inventory-20260625.md  mac-dashboard-launchd-20260628.md  manifest-v0.md  mixed-scope-rollout-20260619.md  nas-gateway-deployment.md  nas-gateway-rollout-20260628.md  nas-static-observer-20260628.md  openclaw-admission-20260615.md  openclaw-approved-push-beijing-20260624.md  openclaw-approved-push-recruitment-20260619.md  openclaw-approved-push-workflow-20260619.md  openclaw-autosync-canary-20260619.md  openclaw-base-adoption-20260618.md  openclaw-blocked-report-20260619.md  openclaw-conflict-local-wins-20260624.md  openclaw-observer-and-blocked-review-20260623.md  openclaw-ops-status-health-20260623.md  openclaw-peer-status-systemd.md  openclaw-pullonly-autosync-20260619.md  openclaw-pullonly-block-rehearsal-20260619.md  openclaw-validation-20260615.md  openclaw-writable-rehearsal-20260618.md  openclaw-writer-policy-20260619.md  operations.md  peer-status-v1.md  protocol-v0.md  release.md  sync-probe-validation-20260615.md
examples/: docker-compose.gateway.yml
scripts/: blocked-queue.sh  build-release-assets.sh  check-nas-dashboard-remote.sh  (+40 more)
(+54 files in other folders)
