[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-sync-sidecar"
version = "0.1.1"
description = "WebDAV-backed sidecar for scanning, validating, and syncing agent skills."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "commiao" }]
license = { text = "MIT" }

[project.scripts]
skill-sync = "skill_sync_sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
