[metadata]
name = skill-sync-sidecar
version = 0.1.2
description = WebDAV-backed sidecar for scanning, validating, and syncing agent skills.
long_description = file: README.md
long_description_content_type = text/markdown
author = commiao
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    skill-sync = skill_sync_sidecar.cli:main
